# course_papper_django

./: .env  .env.sample  Readme.md  pyproject.toml
blog/: admin.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
fixtures/: auth.json  data.json  mailing.json  users.json
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mailing_options.py  0004_alter_mailing_period_alter_mailing_status.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contacts.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_list.html
mailing/templates/mailing/includes/: inc_blog.html  inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  register.html  user_form.html  user_list.html  user_reset_password.html
